[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/supply_bomb.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Supply.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/get_bomb.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 26.0
height = 52.0

[sub_resource type="Animation" id=2]
resource_name = "摇摆"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.4, 50.5, 0.4, -50.5, 0, -0.2, -12.5, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Bomb" type="Area2D"]
rotation = 0.376844
script = ExtResource( 2 )
width = 61
height = 103

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, 1.90735e-06 )
scale = Vector2( 2.7, 5.3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "摇摆"
"anims/摇摆" = SubResource( 2 )

[node name="Get" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Bomb_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
